styled side menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <!-- Inter font for professional UI -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
+    />
   </head>
   <body>
     <div id="root"></div>
